# pyH2A

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
Code/: Discounted_Cash_Flow.py  Energy_Conversion.py  Multiple_Modules_Plugin.py  PDF_Report.py  Photocatalytic_Plugin.py  find_nearest.py  input_modification.py  output_utilities.py  pyH2A.py
Config/: Defaults.md
Input/: 210215_Future_PEM.md  210217_Current_PEM.md  210217_Current_SOE.md  210218_Future_Ferrite.md  210218_Future_SOE.md  210219_Current_Biomass.md  210222_Current_Natural_Gas.md  210305_Future_PEC_Type_1.md  210406_Future_PEC_Type_3.md  210408_Future_PEC_Type_4.md  210416_PV_E_Chang.md  210419_Future_PEC_Type_4_MC.md  210426_PV_E_Chang_Monte_Carlo.md  210509_PV_E_Stolten.md  210511_Future_PEC_Type_4.md  210512_Future_PEC_Type_1.md  210613_Future_PEC_Type_1_LImit.md  210613_PV_E.md  Current_PEM.md  Current_SOE.md  Future_PEC_Type_1.md  Future_PEC_Type_1_Monte_Carlo.md  Future_PEC_Type_2.md  Future_PEC_Type_2_Reordered.md  Future_PEM.md  Input.md  Input_annotated.md  Minimal_Input.md
Lookup_Tables/: Hourly_Irradiation_Data_Townsville_Chang_2020.csv  Industrial_Electricity_AEO_2017_Reference_Case.csv  Labor_Index.csv  MACRS.csv  SRI_Chemical_Price_Index.csv  Woody_Biomass_AEO_2017_Reference_Case.csv  tmy_-17.481_-68.863_2006_2015.csv  tmy_-23.581_115.532_2007_2016.csv  tmy_28.908_-2.988_2007_2016.csv  tmy_34.859_-116.889_2006_2015.csv  tmy_35.632_38.626_2007_2016.csv  tmy_53.181_8.158_2005_2014.csv
data/: Defaults.md  README.md  pyH2A_execution.py
(+135 files in other folders)
