[metadata]
name = pyH2A
version = attr: pyH2A.__version__
author = Jacob Schneidewind
author_email = pyH2A.pypi@gmail.com
description = A framework for the analysis of hydrogen production cost
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jschneidewind/pyH2A
project_urls =
    Bug Tracker = https://github.com/jschneidewind/pyH2A/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    click
    numpy
    scipy
    pandas
    matplotlib
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyH2A = pyH2A.cli_pyH2A:cli